# EarthquakeMetadata

./: .gitignore  README.md  filtered_classifications.json  metadata_errors.csv  parse_metadata.ipynb  parse_metadata.py  pyproject.toml  requirements.txt  setup.py
EarthquakeMetadata.egg-info/: PKG-INFO  SOURCES.txt
MasterGIS/: Master_GIS_File_upload.xlsx
Outputs/: Chile_Adam_metadata.csv  Chile_Adam_metadata_errors.csv  Chile_Ali_metadata.csv  Chile_Tristan_metadata.csv  Chile_Tristan_metadata_errors.csv  Ecuador_Harriettes_metadata.csv  Ecuador_Harriettes_metadata_errors.csv  Ecuador_Nina_metadata.csv  Ecuador_Nina_metadata_errors.csv  indonesia2018-donggala3.csv  indonesia2018_balaroa-fault.csv  indonesia2018_balaroa-landslide4.csv  indonesia2018_coastal-factory.csv  indonesia2018_hotel.csv  indonesia2018_lasoso.csv  indonesia2018_lv3.csv  indonesia2018_mamoboro.csv  indonesia2018_nm3.csv  indonesia2018_nrcoast-fault.csv  indonesia2018_palu-tsunami.csv  indonesia2018_palu-westbank.csv  indonesia2018_palubay-fault.csv  indonesia2018_random.csv  indonesia2018_road.csv  indonesia2018_southpalu-fault.csv  indonesia2018_uni-terbuka.csv  indonesia2018_wadang-restaurant.csv  indonesia2018_wave.csv
api/gcp/: gcp_request.py
api/msa/: url_request.py
api_requests/google_cloud_platform/: gcp_request.py  output.json
api_requests/ms_azure/: generate_access_token.py
package/api_requests/google_cloud_platform/: gcp_request.py  output.csv  service_account_key.json
package/apis/: extract_classifications.py  scrap.py  subject_interface.py  subject_uploader.py  workflow_interface.py
package/apis/loaders/google_cloud_platform/: focused-studio-387911-fe25cc4c40a5.json  gcp_request.py  output.csv
package/apis/loaders/ms_azure/: url_request.py
package/md_combine/: md_combine.py
package/parse_metadata/: parse_metadata.py
